syntax = "proto3";

package api.user;

option go_package = "kratos-im/api/user;user";
option java_multiple_files = true;
option java_package = "api.user";

service User {
	rpc Login (LoginRequest) returns (LoginReply);
	rpc List (ListRequest) returns (ListResp);
}

message LoginRequest {
	string code = 1;
}
message LoginReply {
	message UserInfo {
		string token = 1;
		string user_id = 2;
		string avatar = 4;
		string nickname = 7;
	}

	UserInfo user_info = 1;
	string token = 2;
}

message ListRequest {
	repeated string ids = 1;
}

message ListResp {
	message UserInfo {
		string user_id = 1;
		string avatar = 2;
		string nickname = 3;
	}

	map<string, UserInfo> users = 1;
}